--- a/openshift-enterprise/heat/neutron/highly-available/ose_node_stack.yaml
+++ b/openshift-enterprise/heat/neutron/highly-available/ose_node_stack.yaml
@@ -186,9 +186,9 @@ parameters:
   ose_version:
     description: The version of OpenShift Enterprise to install
     type: string
-    default: "2.0"
+    default: "2.2"
     constraints:
-    - allowed_values: ["1.2", "2.0"]
+    - allowed_values: ["2.0", "2.1", "2.2"]
 
 resources:
   ose_node_sec_grp:
@@ -251,7 +251,6 @@ resources:
       key_name: { get_param: key_name }
       networks:
         - port: { get_resource: node_port }
-      security_groups: [{ get_resource: ose_node_sec_grp }]
       user_data:
         str_replace:
           template: |
