--- a/openshift-enterprise/heat/neutron/OpenShift-1B1N-neutron.yaml
+++ b/openshift-enterprise/heat/neutron/OpenShift-1B1N-neutron.yaml
@@ -130,15 +130,15 @@ parameters:
   ose_version:
     description: The version of OpenShift Enterprise to install
     type: string
-    default: "2.0"
+    default: "2.2"
     constraints:
-      - allowed_values: ["1.2", "2.0"]
+      - allowed_values: ["2.0", "2.1", "2.0"]
   yum_validator_version:
     description: An optional version for the oo-yum-validator tool to use
     type: string
-    default: "2.0"
+    default: "2.2"
     constraints:
-      - allowed_values: ["1.2", "2.0", "2.0beta"]
+      - allowed_values: ["2.0", "2.1", "2.2"]
 
 resources:
   openshift_enterprise_security_group:
@@ -199,7 +199,6 @@ resources:
       key_name: { get_param: key_name }
       networks:
         - port: { get_resource: broker_port }
-      security_groups: [{ get_resource: openshift_enterprise_security_group }]
       user_data:
         str_replace:
           template: |
@@ -230,8 +229,7 @@ resources:
             export CONF_OSE_VERSION=P_OSE_VERSION
             export CONF_YUM_VALIDATOR_VERSION=P_YUM_VALIDATOR_VERSION
             export CONF_INSTALL_COMPONENTS=broker,named,datastore,activemq
-            # oo-admin-check-sources will ship with 2.0 however it is still compatible with OSE 1.2
-            curl -L https://api.github.com/repos/openshift/openshift-extras/tarball/enterprise-2.0 | tar -xvz
+            curl -L https://api.github.com/repos/openshift/openshift-extras/tarball/enterprise-2.2 | tar -xvz
             pushd openshift-openshift-extras*/admin/yum-validator
               VALIDATOR_ARGS="--oo-version=${CONF_OSE_VERSION} --role=broker --fix-all"
               ./oo-admin-yum-validator ${VALIDATOR_ARGS} || ./oo-admin-yum-validator ${VALIDATOR_ARGS}
@@ -288,7 +286,6 @@ resources:
       key_name: { get_param: key_name }
       networks:
         - port: { get_resource: node_port }
-      security_groups: [{ get_resource: openshift_enterprise_security_group }]
       user_data:
         str_replace:
           template: |
